# PiAASortowanie

./: CMakeLists.txt
include/algorithms/: bubblesort.h  heapsort.h  insertsort.h  introsort.h  quicksort.h
src/: averages.cpp  heapsort.h  introsort.h  main.cpp  mergesort.h  quicksort.h  randomNumberGenerator.h
